# PSoXide

./: .gitignore  Cargo.toml  LICENSE  Makefile  PROGRESS.md  README.md
editor/: Cargo.toml
editor/crates/psxed/: Cargo.toml
editor/crates/psxed-audio/: Cargo.toml
editor/crates/psxed-audio/src/: lib.rs
editor/crates/psxed-format/: Cargo.toml
editor/crates/psxed-format/src/: animation.rs  audio.rs  lib.rs  texture.rs  world.rs
editor/crates/psxed-gltf/: Cargo.toml
editor/crates/psxed-gltf/src/: lib.rs
editor/crates/psxed-obj/: Cargo.toml
editor/crates/psxed-project/: Cargo.toml
editor/crates/psxed-project/src/: cloud_bake.rs  lib.rs  model_import.rs  playtest.rs  portal_rooms.rs  resolve.rs  room_connections.rs  spatial.rs  streaming.rs  texture_import.rs  tr_level.rs  world_cook.rs
editor/crates/psxed-tex/: Cargo.toml
editor/crates/psxed-tex/src/: lib.rs
editor/crates/psxed-ui/: Cargo.toml
editor/crates/psxed-ui/src/: gizmo.rs  history.rs  icons.rs  lib.rs  model_animation_viewer.rs  model_import_preview.rs  play_mode.rs  style.rs
editor/crates/psxed/src/: main.rs
editor/projects/default/: project.ron
editor/projects/demo7/: project.ron
emu/: Cargo.toml
emu/crates/emulator-core/: Cargo.toml
emu/crates/emulator-core/examples/: bench_frame_paths.rs  bios_syscall_probe.rs  boot_disc.rs  cache_diff.rs  cache_inspect.rs  cdrom_drive_test.rs  cdrom_probe.rs  commercial_route_matrix.rs  commercial_visual_guard.rs  compare_audio_with_redux.rs  disasm_ram_range.rs  display_parity_at.rs  dma3_audit.rs  dump_isr_window.rs  fetch_first_opcode.rs  generate_trace.rs  gpu_at_step.rs  irq_at_step.rs  local_lockstep_sweep.rs  our_trace_from.rs  parity_diff_at.rs  probe_19474544.rs  probe_aggregated.rs  probe_all_games_100m.rs  probe_all_gpu_cmds.rs  probe_audio.rs  probe_banner_order.rs  probe_bios_audio.rs  probe_bios_audio_onset.rs  probe_breakout_frames.rs  probe_cdda_wav.rs  probe_cdrom_cmds.rs  probe_cdrom_irq_timing.rs  probe_cdrom_state.rs  probe_cdrom_state_at.rs  probe_cmd_hist.rs  probe_coarse_divergence.rs  probe_crash_display.rs  probe_crash_frames.rs  probe_crash_hang.rs  (+66 more)
emu/crates/emulator-core/src/: bus.rs  cdrom.rs  cpu.rs  gpu.rs  irq.rs  lib.rs  mdec.rs  pad.rs  scheduler.rs  sio.rs  spu.rs  telemetry.rs  timers.rs  vram.rs
emu/crates/emulator-core/tests/: commercial_disc_progress.rs  milestones.rs  parity.rs  re2_gameplay.rs  sdk_milestones.rs
emu/crates/frontend/: Cargo.toml
emu/crates/frontend/examples/: bench_cpu_loop.rs
emu/crates/frontend/src/: app.rs  app_icon.rs  audio.rs  burn.rs  cli.rs  editor_assets.rs  editor_preview.rs  editor_textures.rs  gfx.rs  icons.rs  input.rs  main.rs  playtest_input.rs  theme.rs
emu/crates/parity-oracle/examples/: capture_vram_hash.rs  disc_vram_parity.rs  find_big_jumps.rs  find_irq_entries.rs  introspect_pcsx.rs  peek_at_step.rs  redux_introspect.rs  redux_irq_probe.rs  redux_spu_probe.rs  screenshot_probe.rs  trace_inspect.rs  trace_stats.rs
emu/crates/parity-oracle/lua/: oracle.lua
emu/crates/parity-oracle/src/: config.rs  launch.rs  lib.rs
emu/crates/parity-oracle/tests/: commercial_disc_smoke.rs  display_parity.rs  side_loaded_exe.rs  smoke.rs
emu/crates/psoxide-settings/src/: lib.rs  library.rs  paths.rs  savestate.rs  settings.rs
emu/crates/psoxide-validation/: Cargo.toml
emu/crates/psoxide-validation/src/: lib.rs
emu/crates/psx-gpu-compute/examples/: bench_frontend_loop.rs  bench_rasterizer.rs  replay_bisect.rs  replay_disc.rs
emu/crates/psx-gpu-compute/shaders/: tex_quad_bilinear.wgsl
emu/crates/psx-gpu-compute/src/: primitive.rs  rasterizer.rs  replay.rs
emu/crates/psx-gpu-render/: Cargo.toml
emu/crates/psx-gpu-render/examples/: dump_exe.rs  dump_tekken_hw_mode.rs  parity.rs
emu/crates/psx-gpu-render/src/: lib.rs  pipeline.rs  target.rs  translator.rs
engine/: Cargo.toml
engine/crates/psx-engine/: Cargo.toml
engine/crates/psx-engine/src/: angle.rs  app.rs  character_motor.rs  fixed.rs  frames.rs  game_app.rs  lib.rs  render.rs  render3d.rs  scene.rs  scheduler.rs  sfx.rs  telemetry.rs  third_person_camera.rs  time.rs  transform.rs  ui.rs  world.rs  world_render.rs
engine/crates/psx-engine/tests/: time_type_guards.rs
engine/crates/psx-level/: Cargo.toml
engine/crates/psx-level/src/: lib.rs  portal_visibility.rs
engine/examples/editor-playtest/: Cargo.toml  README.md  build.rs
engine/examples/editor-playtest/.cargo/: config.toml
engine/examples/editor-playtest/assets/: shadow_circle_64.psxt  target_lock_64.psxt
engine/examples/editor-playtest/src/: cd_stream.rs  input.rs  main.rs  overlay.rs  runtime_schedule.rs  vram_upload.rs
engine/examples/game-birthday-pong/: Cargo.toml
engine/examples/game-birthday-pong/src/: main.rs
engine/examples/game-breakout/src/: main.rs
engine/examples/game-invaders/: Cargo.toml
engine/examples/game-invaders/src/: main.rs
engine/examples/game-magikaaaaaarp-pong/: Cargo.toml
engine/examples/game-magikaaaaaarp-pong/assets/: magikaaaaaarp_album.psxt  score_flyby.psxt
engine/examples/game-magikaaaaaarp-pong/src/: main.rs
engine/examples/game-pong/src/: main.rs
engine/examples/hardware-tests/: Cargo.toml
engine/examples/hardware-tests/src/: main.rs
engine/examples/hello-engine/src/: main.rs
engine/examples/showcase-3d/src/: main.rs
engine/examples/showcase-fog/src/: main.rs
engine/examples/showcase-lights/src/: main.rs
engine/examples/showcase-model/src/: main.rs
engine/examples/showcase-particles/src/: main.rs
engine/examples/showcase-room/: build.rs
engine/examples/showcase-room/src/: main.rs
engine/examples/showcase-text/src/: main.rs
sdk/: Cargo.toml  psoxide.ld
sdk/crates/psx-asset/: Cargo.toml
sdk/crates/psx-asset/src/: lib.rs
sdk/crates/psx-gpu/src/: lib.rs  material.rs  ot.rs  prim.rs
sdk/crates/psx-gte-core/: Cargo.toml
sdk/crates/psx-gte-core/src/: lib.rs  state.rs  transform.rs
sdk/crates/psx-gte/src/: lighting.rs  scene.rs
sdk/crates/psx-rt/: Cargo.toml
sdk/examples/hello-audio/: Cargo.toml
sdk/examples/hello-cdda/: Cargo.toml
(+894 files in other folders)
