[workspace]
resolver = "2"
members = [
    "crates/psx-hw",
    "crates/psx-iso",
    "crates/psx-trace",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "GPL-2.0-or-later"
repository = "https://github.com/EBonura/PSoXide"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
too_many_arguments = "allow"

[workspace.dependencies]
bitflags   = { version = "2.6", default-features = false }
serde      = { version = "1.0", default-features = false }
serde_json = { version = "1.0" }
