[workspace]
resolver = "2"
members = [
    "crates/psxed-format",
    "crates/psxed-obj",
    "crates/psxed",
]

[workspace.package]
edition    = "2021"
license    = "MIT OR Apache-2.0"
repository = "https://github.com/EBonura/PSoXide-3"

[workspace.dependencies]
psxed-format = { path = "crates/psxed-format" }
psxed-obj    = { path = "crates/psxed-obj" }
