[workspace]
resolver = "2"
members = [
    "crates/psxed-format",
    "crates/psxed-gltf",
    "crates/psxed-obj",
    "crates/psxed-project",
    "crates/psxed-tex",
    "crates/psxed-ui",
    "crates/psxed",
]

[workspace.package]
edition    = "2021"
license    = "GPL-2.0-or-later"
repository = "https://github.com/EBonura/PSoXide"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
too_many_arguments = "allow"

[workspace.dependencies]
psx-asset    = { path = "../sdk/crates/psx-asset" }
psxed-format = { path = "crates/psxed-format" }
psxed-gltf   = { path = "crates/psxed-gltf" }
psxed-obj    = { path = "crates/psxed-obj" }
psxed-project = { path = "crates/psxed-project" }
psxed-tex    = { path = "crates/psxed-tex" }
psxed-ui     = { path = "crates/psxed-ui" }

egui  = "0.31"
serde = { version = "1.0", features = ["derive"] }
