[workspace]
resolver = "2"
members = [
    "crates/emulator-core",
    "crates/frontend",
    "crates/parity-oracle",
    "crates/psoxide-settings",
    "crates/psx-gpu-compute",
    "crates/psx-gpu-render",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "GPL-2.0-or-later"
repository = "https://github.com/EBonura/PSoXide"

[workspace.dependencies]
# Shared-crate path deps. Three levels up: emu/crates/emulator-core/ → repo root → crates/.
psx-hw       = { path = "../crates/psx-hw" }
psx-iso      = { path = "../crates/psx-iso" }
psx-trace    = { path = "../crates/psx-trace" }
psx-asset    = { path = "../sdk/crates/psx-asset" }
psx-gpu      = { path = "../sdk/crates/psx-gpu" }
psx-vram     = { path = "../sdk/crates/psx-vram" }
psx-gte      = { path = "../sdk/crates/psx-gte" }
psx-gte-core = { path = "../sdk/crates/psx-gte-core" }
psx-engine    = { path = "../engine/crates/psx-engine" }
psxed-project = { path = "../editor/crates/psxed-project" }

# Host-workspace-internal deps (one crate depends on another here).
emulator-core    = { path = "crates/emulator-core" }
parity-oracle    = { path = "crates/parity-oracle" }
psoxide-settings = { path = "crates/psoxide-settings" }
psx-gpu-compute  = { path = "crates/psx-gpu-compute" }
psx-gpu-render   = { path = "crates/psx-gpu-render" }
psxed-ui         = { path = "../editor/crates/psxed-ui" }

thiserror  = "1.0"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile   = "3.10"
# Rust-native config + save-state formats. RON for human-editable
# config (settings.ron, library.ron) -- tagged enums round-trip
# losslessly; postcard for binary savestates (compact, serde-native).
ron         = "0.8"
postcard    = { version = "1.0", features = ["alloc"] }
directories = "5.0"
clap        = { version = "4.5", features = ["derive"] }

# Frontend stack. Locked-in versions that PSoXide-1/-2 both converged on;
# bumping is a deliberate decision, not a drift.
winit       = "0.30"
wgpu        = "24"
egui        = "0.31"
egui-wgpu   = "0.31"
egui-winit  = "0.31"
image       = { version = "0.25", default-features = false, features = ["png"] }
pollster    = "0.3"
cpal        = "0.15"
gilrs       = "0.11"
rfd         = "0.15"

# The live frontend is often launched with `cargo run -p frontend`
# while iterating on editor/gameplay work. Keep dev builds debuggable,
# but avoid a fully unoptimized emulator shell.
[profile.dev]
opt-level = 1

# Release is the path used by `make run`; thin LTO lets the frontend
# inline across the emulator/renderer crates without the full build-time
# cost of fat LTO.
[profile.release]
lto = "thin"
codegen-units = 1

# The emulator and renderer hot path still need full optimization in
# dev builds so live playtest does not spend seconds retiring guest
# instructions between VBlanks.
[profile.dev.package.emulator-core]
opt-level = 3

[profile.dev.package.frontend]
opt-level = 3

[profile.dev.package.psx-gte]
opt-level = 3

[profile.dev.package.psx-gte-core]
opt-level = 3

[profile.dev.package.psx-gpu-render]
opt-level = 3
