[workspace]
resolver = "2"
members = [
    "crates/psx-engine",
    "crates/psx-level",
]

[workspace.package]
edition    = "2021"
license    = "GPL-2.0-or-later"
repository = "https://github.com/EBonura/PSoXide"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
too_many_arguments = "allow"

[workspace.dependencies]
# The engine runs on the MIPS target -- it depends on the SDK
# crates, not on host-side editor crates. Paths are relative to
# the workspace root. Every SDK crate we reach for gets listed
# here once; engine crates inherit them via `{ workspace = true }`
# so version pinning stays in one place.
psx-asset = { path = "../sdk/crates/psx-asset" }
psx-level = { path = "crates/psx-level" }
psx-fx    = { path = "../sdk/crates/psx-fx" }
psx-gpu   = { path = "../sdk/crates/psx-gpu" }
psx-gte   = { path = "../sdk/crates/psx-gte" }
psx-math  = { path = "../sdk/crates/psx-math" }
psx-pad   = { path = "../sdk/crates/psx-pad" }
psx-rt    = { path = "../sdk/crates/psx-rt" }
psx-spu   = { path = "../sdk/crates/psx-spu" }
psx-vram  = { path = "../sdk/crates/psx-vram" }
