[package]
name = "psxed-audio"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Host-side WAV to PSoXide PS1 SPU ADPCM audio cooker."

[dependencies]
psxed-format = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
sha2         = { workspace = true }
zip          = { workspace = true }
