[package]
name    = "psxed-gltf"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EBonura/PSoXide-3"
description = "glTF/GLB mesh importer for PSoXide-3's content pipeline. Cooks scene meshes into PSXM blobs."

# Explicit paths rather than `workspace = true` so this crate
# resolves cleanly when consumed from outside its native
# workspace (psxed-project pulls it in for model registration,
# and psxed-project itself is consumed by the emu frontend).
[dependencies]
gltf         = "1"
psxed-format = { path = "../psxed-format" }
psxed-obj    = { path = "../psxed-obj" }
psxed-tex    = { path = "../psxed-tex" }

[dev-dependencies]
psx-asset = { path = "../../../sdk/crates/psx-asset" }
