[package]
name = "psxed-project"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
repository = "https://github.com/EBonura/PSoXide"
description = "PSoXide editor project model: scenes, nodes, resources, and PS1-facing authoring metadata."

[dependencies]
psxed-format = { path = "../psxed-format" }
psxed-gltf   = { path = "../psxed-gltf" }
psxed-tex    = { path = "../psxed-tex" }
psx-asset    = { path = "../../../sdk/crates/psx-asset" }
psx-engine   = { path = "../../../engine/crates/psx-engine" }
psx-iso      = { path = "../../../crates/psx-iso" }
psx-level    = { path = "../../../engine/crates/psx-level" }
flate2 = "1.1"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "cook-playtest"
path = "src/bin/cook_playtest.rs"

[[bin]]
name = "import-tr-level"
path = "src/bin/import_tr_level.rs"
