[package]
name = "psxed-ui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EBonura/PSoXide-3"
description = "Reusable egui workspace panels for the PSoXide editor."

[dependencies]
egui = "0.31"
psx-gte = { path = "../../../sdk/crates/psx-gte" }
psxed-project = { path = "../psxed-project" }
