[package]
name = "psoxide-validation"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
ron        = { workspace = true }
serde      = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
