[package]
name    = "editor-playtest"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[workspace]

[[bin]]
name = "editor-playtest"
path = "src/main.rs"

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true

[features]
default = [
    "cd-stream-bench",
    "world-order-bucketed",
    "world-grid-visible",
    "ot-2048",
    "vis-coarse-yaw",
    "vis-static-active-turn",
]
cd-stream-bench = ["dep:psx-io"]
cd-stream-benchmark = ["cd-stream-bench"]
world-order-global = []
world-order-slot = []
world-order-linked = []
world-order-bucketed = []
world-grid-visible = []
vis-anchor-cache = []
vis-broad-pvs = []
vis-coarse-yaw = []
vis-full-active-chunks = []
vis-static-active-turn = []
room-surface-profile = ["psx-engine/room-surface-profile"]
ot-1024 = []
ot-2048 = []

[dependencies]
psx-asset  = { path = "../../../sdk/crates/psx-asset" }
psx-engine = { path = "../../crates/psx-engine" }
psx-font   = { path = "../../../sdk/crates/psx-font" }
psx-gpu    = { path = "../../../sdk/crates/psx-gpu" }
psx-gte    = { path = "../../../sdk/crates/psx-gte" }
psx-io     = { path = "../../../sdk/crates/psx-io", optional = true }
psx-level  = { path = "../../crates/psx-level" }
psx-math   = { path = "../../../sdk/crates/psx-math" }
psx-rt     = { path = "../../../sdk/crates/psx-rt" }
psx-vram   = { path = "../../../sdk/crates/psx-vram" }
