[package]
name    = "game-magikaaaaaarp-pong"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[workspace]

[[bin]]
name = "game-magikaaaaaarp-pong"
path = "src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true

[dependencies]
psx-asset  = { path = "../../../sdk/crates/psx-asset" }
psx-engine = { path = "../../crates/psx-engine", features = ["boot-trace"] }
psx-font   = { path = "../../../sdk/crates/psx-font" }
psx-gpu    = { path = "../../../sdk/crates/psx-gpu" }
psx-io     = { path = "../../../sdk/crates/psx-io" }
psx-rt     = { path = "../../../sdk/crates/psx-rt", features = ["boot-trace"] }
psx-spu    = { path = "../../../sdk/crates/psx-spu" }
psx-vram   = { path = "../../../sdk/crates/psx-vram" }
